--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
 		"module": "es6",
 		"target": "es5",
 		"allowJs": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"lib": [
+			"es2015.promise",
+			"dom"
+		]
 	}
 }
