--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/es6-shim": "^0.31.36",
     "html-loader": "^0.5.5",
     "lite-server": "^2.3.0",
+    "rxjs": "^5.5.10",
     "ts-loader": "^4.1.0",
     "typescript": "^2.8.1",
     "webpack": "^4.4.1",
