--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
 		"allowJs": true,
 		"sourceMap": true,
 		"moduleResolution": "node",
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
 		"lib": [
 			"es6",
 			"dom"
