--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "author": "Scott Cybak <scott.cybak@gmail.com>",
   "license": "ISC",
+  "dependencies": {
+    "rxjs": "^6.5.1"
+  },
   "devDependencies": {
     "@types/es6-shim": "^0.31.39",
-    "html-loader": "^0.5.5",
     "lite-server": "^2.4.0",
-    "rxjs": "^6.3.3",
-    "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
