--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -w & lite-server --baseDir=\"dist\""
+    "start": "webpack -w & lite-server --baseDir=\"dist\""
   },
   "author": "Scott Cybak <scott.cybak@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "rxjs": "^6.5.1"
+    "rxjs": "^6.6.2"
   },
   "devDependencies": {
-    "@types/es6-shim": "^0.31.39",
-    "lite-server": "^2.4.0",
-    "typescript": "^3.1.6",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2"
+    "@types/es6-shim": "^0.31.41",
+    "lite-server": "^2.5.4",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
