--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "author": "Scott Cybak <scott.cybak@gmail.com>",
   "license": "ISC",
-  "peerDependencies": {
-	"rxjs": "^6.6.2"
+  "dependencies": {
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.41",
-    "lite-server": "^2.5.4",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "lite-server": "^2.6.1",
+    "typescript": "^4.1.2",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0"
   }
 }
